Fix: Replace fake IG profiles with verified real profiles

--- a/index.html
+++ b/index.html
@@ -1280,49 +1280,49 @@
         ];
 
         const niuroFollowsBios = [
-            { handle: '@carlos_devops_cl', bio: 'Senior DevOps Engineer | Cloud Architecture', followers: 3200, score: 92 },
-            { handle: '@sofia_fullstack', bio: 'Fullstack Developer | React + Node.js', followers: 2800, score: 89 },
-            { handle: '@juan_startup_mx', bio: 'Co-founder at TechStart | Hiring Engineers', followers: 5600, score: 95 },
-            { handle: '@maria_ai_engineer', bio: 'AI/ML Engineer | Computer Vision', followers: 1900, score: 88 },
-            { handle: '@diego_backend', bio: 'Backend Engineer | Golang | Cloud-native', followers: 2300, score: 87 },
-            { handle: '@laura_frontend', bio: 'Frontend Engineer | Design Systems | UX', followers: 3100, score: 86 },
-            { handle: '@pedro_arquitecto', bio: 'Software Architect | Enterprise Systems', followers: 4200, score: 91 },
-            { handle: '@ana_devrel', bio: 'Developer Relations | Tech Community', followers: 2600, score: 85 },
-            { handle: '@martinez_qa', bio: 'QA Engineer | Automation Testing | CI/CD', followers: 1700, score: 84 },
-            { handle: '@tech_recruiter_mx', bio: 'Tech Recruiter | Hiring for LATAM', followers: 6800, score: 93 },
-            { handle: '@luis_python', bio: 'Python Developer | Data Science', followers: 2100, score: 82 },
-            { handle: '@fernanda_pm', bio: 'Product Manager | Tech Strategy', followers: 3400, score: 87 },
-            { handle: '@victor_startup', bio: 'CTO | Early-stage Startups | Advisor', followers: 4900, score: 94 },
-            { handle: '@gabriela_design', bio: 'Product Designer | UI/UX | Tech', followers: 2400, score: 80 },
-            { handle: '@alejandro_eng', bio: 'Engineering Manager | Leadership', followers: 3600, score: 88 },
-            { handle: '@rosa_cloud', bio: 'Cloud Architect | AWS | Infrastructure', followers: 2700, score: 86 },
-            { handle: '@daniel_mobile', bio: 'Mobile Developer | iOS & Android', followers: 1900, score: 81 },
-            { handle: '@catalina_agile', bio: 'Agile Coach | Scrum Master', followers: 2200, score: 79 },
-            { handle: '@rafael_security', bio: 'Security Engineer | DevSecOps', followers: 2050, score: 85 },
-            { handle: '@beatriz_ai', bio: 'AI Product Manager | ML Ops', followers: 1650, score: 83 }
+            { handle: '@chilenacionemprendedora', bio: 'Historias reales para construir mejores empresas. Podcast de empresarios y ejecutivos', followers: 4961, score: 95 },
+            { handle: '@eva.confia', bio: '15+ años seleccionando personal de confianza. Experiencia en Peru, Mexico y España', followers: 2515, score: 94 },
+            { handle: '@maisfloro.tech', bio: 'Director SRE at Talana. Founder AWS Girls Chile. Ex-AWS. Woman in Tech', followers: 1547, score: 93 },
+            { handle: '@talentmomentum', bio: 'Nosotros ponemos el talento, tu haces crecer tu empresa. Gestion integral de talento remoto', followers: 45, score: 92 },
+            { handle: '@obriiconsulting', bio: 'HR Tech y Psicologia. Fusionamos ciencia e IA para seleccion de talento precisa y libre de sesgo', followers: 148, score: 91 },
+            { handle: '@mimconsultoraintegralrrhh', bio: 'Consultora Integral de RRHH. Acompañamos la gestion de personas. Soluciones claras y a la medida', followers: 52, score: 91 },
+            { handle: '@impulsotalento.spa', bio: 'Impulsamos a profesionales en su busqueda laboral. Apoyamos empresas en sus procesos de seleccion', followers: 35, score: 90 },
+            { handle: '@octavio.presales', bio: 'PreSales Specialist | Solutions and Sales Engineering Evangelist | Passionate about Marketing', followers: 39, score: 89 },
+            { handle: '@hti_automation', bio: 'Laborautomatisierung: Etikettieren, Befuellen und Verschrauben. Engineering Made in Germany', followers: 316, score: 88 },
+            { handle: '@ximeworks', bio: 'Diseñadora de productos digitales UX/UI, ademas me encanta ilustrar y las cosas manuales', followers: 281, score: 88 },
+            { handle: '@reclutamiento_sta.lucia', bio: 'Quieres Trabajar con nosotros? Reclutamiento y seleccion de personal', followers: 64, score: 87 },
+            { handle: '@cvlisto.servicios', bio: 'CV Listo - Curriculum profesionales. Te hacemos el CV y postulamos por ti', followers: 10, score: 86 },
+            { handle: '@consultoramymspa', bio: 'Asesorias en seguridad y salud laboral para diversos rubros. Comites Paritarios y Prevencion', followers: 57, score: 85 },
+            { handle: '@erp.techy', bio: 'IT Service and Consultancy. Systematic Business Development', followers: 7, score: 84 },
+            { handle: '@kollectgroup', bio: 'Firma Legal Boutique. Soluciones claras. Asesoria personalizada y eficiente', followers: 130, score: 83 },
+            { handle: '@samycloses', bio: 'HTS - Coaches dont play and I dont miss', followers: 1305, score: 82 },
+            { handle: '@corejack', bio: 'Tech and Gaming Community', followers: 691, score: 81 },
+            { handle: '@lisettegomez_remax_start', bio: 'Tecnologia, expertise, agilidad y acompañamiento. Respaldo global y exito local', followers: 19, score: 80 },
+            { handle: '@e_llanten', bio: 'Musico/Ingeniero. Viña Del Mar, Chile', followers: 1371, score: 79 },
+            { handle: '@hola_soysergio', bio: 'Emprendedor digital | Tech e innovacion', followers: 0, score: 78 }
         ];
 
         const enderysFollowsBios = [
-            { handle: '@workflow_expert_cl', bio: 'Automation Expert | Business Process', followers: 2800, score: 91 },
-            { handle: '@marta_nocode', bio: 'No-code Specialist | Zapier | Make', followers: 3200, score: 89 },
-            { handle: '@ignacio_automation', bio: 'RPA Engineer | Automation Architecture', followers: 2400, score: 88 },
-            { handle: '@elena_saas', bio: 'SaaS Consultant | Digital Transformation', followers: 4100, score: 90 },
-            { handle: '@sergio_erp', bio: 'ERP Consultant | Business Systems', followers: 3600, score: 87 },
-            { handle: '@juanma_data', bio: 'Data Engineer | ETL | Analytics', followers: 2600, score: 85 },
-            { handle: '@vanessa_hr_tech', bio: 'HR Tech Specialist | Talent Management', followers: 2300, score: 84 },
-            { handle: '@ricardo_crm', bio: 'CRM Strategist | Salesforce Expert', followers: 3900, score: 86 },
-            { handle: '@paula_integration', bio: 'Systems Integration Specialist', followers: 2100, score: 83 },
-            { handle: '@hector_digital', bio: 'Digital Transformation Lead', followers: 3700, score: 88 },
-            { handle: '@monica_ops', bio: 'Operations Manager | Process Optimization', followers: 2200, score: 82 },
-            { handle: '@valentin_api', bio: 'API Architect | Integration Systems', followers: 1900, score: 80 },
-            { handle: '@cristina_workflow', bio: 'Workflow Designer | Business Analysis', followers: 2000, score: 81 },
-            { handle: '@andres_efficiency', bio: 'Efficiency Consultant | Automation', followers: 2500, score: 84 },
-            { handle: '@isabel_innovation', bio: 'Innovation Manager | Tech Strategy', followers: 3200, score: 87 },
-            { handle: '@marcos_compliance', bio: 'Compliance Officer | Governance', followers: 1800, score: 79 },
-            { handle: '@natalia_scale', bio: 'Scaling Expert | Business Growth', followers: 2700, score: 85 },
-            { handle: '@franco_devops', bio: 'DevOps for SaaS | Infrastructure', followers: 2300, score: 82 },
-            { handle: '@gabriele_backend', bio: 'Backend Systems | Microservices', followers: 1700, score: 78 },
-            { handle: '@ximena_pm', bio: 'Product Manager | SaaS | Marketplace', followers: 3400, score: 86 }
+            { handle: '@miguelrojas.ia', bio: 'Convierto la IA en una aliada cotidiana. Quieres ser parte de IA sin Miedo?', followers: 719, score: 95 },
+            { handle: '@simplilatam', bio: 'Factoring digital, humano y simple. Liquidez en el mismo dia y total transparencia', followers: 4698, score: 94 },
+            { handle: '@obriiconsulting', bio: 'HR Tech y Psicologia. Fusionamos ciencia e IA para seleccion de talento precisa', followers: 148, score: 93 },
+            { handle: '@fonttech.cl', bio: 'Desarrollo y Gestion de plataformas SaaS. Aplicaciones web', followers: 13, score: 92 },
+            { handle: '@maisfloro.tech', bio: 'Director SRE at Talana. Founder AWS Girls Chile. Ex-AWS. Woman in Tech', followers: 1547, score: 91 },
+            { handle: '@codestorechile', bio: 'Mercado de software en Chile. Registrate gratis. CodeStore Marketplace', followers: 6, score: 91 },
+            { handle: '@goxt_innovacion', bio: 'Software que impulsa negocios. Tecnologia para empresas en crecimiento. CRM + Logistica', followers: 3, score: 90 },
+            { handle: '@clodi.cl', bio: 'Menos papeles, mas control de seguridad HSE. Plataforma de gestion digital', followers: 5, score: 89 },
+            { handle: '@brucebruce_dev', bio: 'Python sin humo. Codigo claro. Resultados reales. Shorts diarios', followers: 0, score: 88 },
+            { handle: '@dva.legal', bio: 'Registro de Marcas. Asesoria legal a Condominios. Servicios legales corporativos', followers: 350, score: 87 },
+            { handle: '@startupnewsitalia', bio: 'Startup News Italia - Noticias del ecosistema emprendedor', followers: 85, score: 86 },
+            { handle: '@track_time_', bio: 'Tracking y gestion de tiempo. Productividad y eficiencia', followers: 2228, score: 85 },
+            { handle: '@miguelurrutiaceo_', bio: 'Founder @detef_. CEO y emprendedor tech', followers: 31, score: 84 },
+            { handle: '@kollectgroup', bio: 'Firma Legal Boutique. Soluciones claras y asesoria personalizada', followers: 130, score: 83 },
+            { handle: '@dieptar', bio: 'Diego Shepherd - Emprendedor y creador de contenido', followers: 0, score: 82 },
+            { handle: '@draerikavillavicencioayub', bio: 'Dra. Erika Villavicencio Ayub - Investigadora y conferencista', followers: 213, score: 81 },
+            { handle: '@duploz.cl', bio: 'Cocktails y Craft Beer. Apoquindo 4900, Las Condes', followers: 39335, score: 80 },
+            { handle: '@e_llanten', bio: 'Musico/Ingeniero. Viña Del Mar, Chile', followers: 1371, score: 79 },
+            { handle: '@lisettegomez_remax_start', bio: 'Tecnologia, expertise, agilidad y acompañamiento. Respaldo global', followers: 19, score: 78 },
+            { handle: '@cotemayorga.v', bio: 'Maria Jose Mayorga V. - Emprendedora digital', followers: 0, score: 77 }
         ];
 
         const niuroStories = [
