Refactor user bios and handles in index.html
Updated bios and handles for various users, correcting typos and improving clarity.

--- a/index.html
+++ b/index.html
@@ -1280,49 +1280,49 @@
         ];
 
         const niuroFollowsBios = [
-            { handle: '@chilenacionemprendedora', bio: 'Historias reales para construir mejores empresas. Podcast de empresarios y ejecutivos', followers: 4961, score: 95 },
-            { handle: '@eva.confia', bio: '15+ años seleccionando personal de confianza. Experiencia en Peru, Mexico y España', followers: 2515, score: 94 },
+            { handle: '@chilenacionemprendedora', bio: 'Historias reales para pensar y construir mejores empresas. Podcast de empresarios y ejecutivos', followers: 4961, score: 95 },
+            { handle: '@eva.confia', bio: '15+ años seleccionando personal de confianza. Experiencia en Perú, México y España', followers: 2515, score: 94 },
+            { handle: '@talentmomentum', bio: 'Nosotros ponemos el talento, tú haces crecer tu empresa. Gestión integral de talento remoto', followers: 45, score: 92 },
+            { handle: '@mimconsultoraintegralrrhh', bio: 'Consultora Integral de RRHH. Acompañamos la gestión de personas. Soluciones claras y a la medida', followers: 52, score: 91 },
+            { handle: '@impulsotalento.spa', bio: 'Impulsamos a profesionales en su búsqueda laboral. Apoyamos empresas en sus procesos de selección', followers: 35, score: 90 },
+            { handle: '@octavio.presales', bio: 'PreSales Specialist | Solutions & Sales Engineering Evangelist | Passionate about Marketing', followers: 39, score: 89 },
+            { handle: '@ximeworks', bio: 'Diseñadora de productos digitales UX/UI, además me encanta ilustrar y las cosas manuales', followers: 281, score: 88 },
+            { handle: '@reclutamiento_sta.lucia', bio: '¿Quieres Trabajar con nosotros? Reclutamiento y selección de personal', followers: 64, score: 87 },
+            { handle: '@cvlisto.servicios', bio: 'CV Listo - Currículum profesionales. Te hacemos el CV y postulamos por ti. Rápido y eficaz', followers: 10, score: 86 },
+            { handle: '@consultoramymspa', bio: 'Asesorías en seguridad y salud laboral para diversos rubros. Comités Paritarios y Prevención', followers: 57, score: 85 },
+            { handle: '@erp.techy', bio: 'IT Service and Consultancy. Systematic Business Development. Setup & Renew Inventory', followers: 7, score: 84 },
+            { handle: '@hti_automation', bio: 'Laborautomatisierung: Etikettieren, Befüllen & Verschrauben. Engineering Made in Germany', followers: 316, score: 88 },
+            { handle: '@samycloses', bio: 'HTS - Coaches don\'t play & I don\'t miss', followers: 1305, score: 82 },
+            { handle: '@corejack', bio: 'Tech & Gaming Community', followers: 691, score: 81 },
+            { handle: '@lisettegomez_remax_start', bio: 'Tecnología, expertise, agilidad y acompañamiento a nuestros clientes. Respaldo global y éxito local', followers: 19, score: 80 },
+            { handle: '@e_llanten', bio: 'Músico/Ingeniero. Viña Del Mar, Chile', followers: 1371, score: 79 },
             { handle: '@maisfloro.tech', bio: 'Director SRE at Talana. Founder AWS Girls Chile. Ex-AWS. Woman in Tech', followers: 1547, score: 93 },
-            { handle: '@talentmomentum', bio: 'Nosotros ponemos el talento, tu haces crecer tu empresa. Gestion integral de talento remoto', followers: 45, score: 92 },
-            { handle: '@obriiconsulting', bio: 'HR Tech y Psicologia. Fusionamos ciencia e IA para seleccion de talento precisa y libre de sesgo', followers: 148, score: 91 },
-            { handle: '@mimconsultoraintegralrrhh', bio: 'Consultora Integral de RRHH. Acompañamos la gestion de personas. Soluciones claras y a la medida', followers: 52, score: 91 },
-            { handle: '@impulsotalento.spa', bio: 'Impulsamos a profesionales en su busqueda laboral. Apoyamos empresas en sus procesos de seleccion', followers: 35, score: 90 },
-            { handle: '@octavio.presales', bio: 'PreSales Specialist | Solutions and Sales Engineering Evangelist | Passionate about Marketing', followers: 39, score: 89 },
-            { handle: '@hti_automation', bio: 'Laborautomatisierung: Etikettieren, Befuellen und Verschrauben. Engineering Made in Germany', followers: 316, score: 88 },
-            { handle: '@ximeworks', bio: 'Diseñadora de productos digitales UX/UI, ademas me encanta ilustrar y las cosas manuales', followers: 281, score: 88 },
-            { handle: '@reclutamiento_sta.lucia', bio: 'Quieres Trabajar con nosotros? Reclutamiento y seleccion de personal', followers: 64, score: 87 },
-            { handle: '@cvlisto.servicios', bio: 'CV Listo - Curriculum profesionales. Te hacemos el CV y postulamos por ti', followers: 10, score: 86 },
-            { handle: '@consultoramymspa', bio: 'Asesorias en seguridad y salud laboral para diversos rubros. Comites Paritarios y Prevencion', followers: 57, score: 85 },
-            { handle: '@erp.techy', bio: 'IT Service and Consultancy. Systematic Business Development', followers: 7, score: 84 },
-            { handle: '@kollectgroup', bio: 'Firma Legal Boutique. Soluciones claras. Asesoria personalizada y eficiente', followers: 130, score: 83 },
-            { handle: '@samycloses', bio: 'HTS - Coaches dont play and I dont miss', followers: 1305, score: 82 },
-            { handle: '@corejack', bio: 'Tech and Gaming Community', followers: 691, score: 81 },
-            { handle: '@lisettegomez_remax_start', bio: 'Tecnologia, expertise, agilidad y acompañamiento. Respaldo global y exito local', followers: 19, score: 80 },
-            { handle: '@e_llanten', bio: 'Musico/Ingeniero. Viña Del Mar, Chile', followers: 1371, score: 79 },
-            { handle: '@hola_soysergio', bio: 'Emprendedor digital | Tech e innovacion', followers: 0, score: 78 }
+            { handle: '@obriiconsulting', bio: 'HR Tech & Psicología. Fusionamos ciencia e IA para selección de talento precisa y libre de sesgo', followers: 148, score: 91 },
+            { handle: '@hola_soysergio', bio: 'Emprendedor digital | Tech & innovación', followers: 0, score: 78 },
+            { handle: '@kollectgroup', bio: 'Firma Legal Boutique | Soluciones claras. Asesoría personalizada y eficiente', followers: 130, score: 83 }
         ];
 
         const enderysFollowsBios = [
-            { handle: '@miguelrojas.ia', bio: 'Convierto la IA en una aliada cotidiana. Quieres ser parte de IA sin Miedo?', followers: 719, score: 95 },
-            { handle: '@simplilatam', bio: 'Factoring digital, humano y simple. Liquidez en el mismo dia y total transparencia', followers: 4698, score: 94 },
-            { handle: '@obriiconsulting', bio: 'HR Tech y Psicologia. Fusionamos ciencia e IA para seleccion de talento precisa', followers: 148, score: 93 },
-            { handle: '@fonttech.cl', bio: 'Desarrollo y Gestion de plataformas SaaS. Aplicaciones web', followers: 13, score: 92 },
-            { handle: '@maisfloro.tech', bio: 'Director SRE at Talana. Founder AWS Girls Chile. Ex-AWS. Woman in Tech', followers: 1547, score: 91 },
-            { handle: '@codestorechile', bio: 'Mercado de software en Chile. Registrate gratis. CodeStore Marketplace', followers: 6, score: 91 },
-            { handle: '@goxt_innovacion', bio: 'Software que impulsa negocios. Tecnologia para empresas en crecimiento. CRM + Logistica', followers: 3, score: 90 },
-            { handle: '@clodi.cl', bio: 'Menos papeles, mas control de seguridad HSE. Plataforma de gestion digital', followers: 5, score: 89 },
-            { handle: '@brucebruce_dev', bio: 'Python sin humo. Codigo claro. Resultados reales. Shorts diarios', followers: 0, score: 88 },
-            { handle: '@dva.legal', bio: 'Registro de Marcas. Asesoria legal a Condominios. Servicios legales corporativos', followers: 350, score: 87 },
+            { handle: '@miguelrojas.ia', bio: 'Convierto la IA en una aliada cotidiana. ¿Quieres ser parte de IA sin Miedo?', followers: 719, score: 95 },
+            { handle: '@simplilatam', bio: 'Factoring digital, humano y simple. Liquidez en el mismo día y total transparencia. Plataforma digital', followers: 4698, score: 94 },
+            { handle: '@fonttech.cl', bio: 'Desarrollo y Gestión de plataformas SaaS. Aplicaciones web. Gestiona tu proyecto con desarrollo experto', followers: 13, score: 92 },
+            { handle: '@codestorechile', bio: 'Mercado de software en Chile. Regístrate gratis. CodeStore Marketplace de Software', followers: 6, score: 91 },
+            { handle: '@goxt_innovacion', bio: 'Software que impulsa negocios. Tecnología para empresas en crecimiento. CRM + Operación Logística', followers: 3, score: 90 },
+            { handle: '@clodi.cl', bio: 'Menos papeles, más control de seguridad HSE. Plataforma de gestión digital', followers: 5, score: 89 },
+            { handle: '@brucebruce_dev', bio: 'Python sin humo. Código claro. Resultados reales. Shorts diarios', followers: 0, score: 88 },
+            { handle: '@dva.legal', bio: 'Registro de Marcas. Asesoría legal a Condominios. Servicios legales corporativos', followers: 350, score: 87 },
             { handle: '@startupnewsitalia', bio: 'Startup News Italia - Noticias del ecosistema emprendedor', followers: 85, score: 86 },
-            { handle: '@track_time_', bio: 'Tracking y gestion de tiempo. Productividad y eficiencia', followers: 2228, score: 85 },
-            { handle: '@miguelurrutiaceo_', bio: 'Founder @detef_. CEO y emprendedor tech', followers: 31, score: 84 },
-            { handle: '@kollectgroup', bio: 'Firma Legal Boutique. Soluciones claras y asesoria personalizada', followers: 130, score: 83 },
+            { handle: '@track_time_', bio: 'Tracking y gestión de tiempo. Productividad y eficiencia', followers: 2228, score: 85 },
+            { handle: '@miguelurrutiaceo_', bio: 'Founder @detef_. CEO & emprendedor tech', followers: 31, score: 84 },
+            { handle: '@duploz.cl', bio: 'Cocktails & Craft Beer. Apoquindo 4900, Las Condes', followers: 39335, score: 80 },
+            { handle: '@obriiconsulting', bio: 'HR Tech & Psicología. Fusionamos ciencia e IA para selección de talento precisa y libre de sesgo', followers: 148, score: 93 },
             { handle: '@dieptar', bio: 'Diego Shepherd - Emprendedor y creador de contenido', followers: 0, score: 82 },
+            { handle: '@kollectgroup', bio: 'Firma Legal Boutique. Soluciones claras y asesoría personalizada', followers: 130, score: 83 },
             { handle: '@draerikavillavicencioayub', bio: 'Dra. Erika Villavicencio Ayub - Investigadora y conferencista', followers: 213, score: 81 },
-            { handle: '@duploz.cl', bio: 'Cocktails y Craft Beer. Apoquindo 4900, Las Condes', followers: 39335, score: 80 },
-            { handle: '@e_llanten', bio: 'Musico/Ingeniero. Viña Del Mar, Chile', followers: 1371, score: 79 },
-            { handle: '@lisettegomez_remax_start', bio: 'Tecnologia, expertise, agilidad y acompañamiento. Respaldo global', followers: 19, score: 78 },
-            { handle: '@cotemayorga.v', bio: 'Maria Jose Mayorga V. - Emprendedora digital', followers: 0, score: 77 }
+            { handle: '@maisfloro.tech', bio: 'Director SRE at Talana. Founder AWS Girls Chile. Ex-AWS. Woman in Tech', followers: 1547, score: 91 },
+            { handle: '@e_llanten', bio: 'Músico/Ingeniero. Viña Del Mar, Chile', followers: 1371, score: 79 },
+            { handle: '@lisettegomez_remax_start', bio: 'Tecnología, expertise, agilidad y acompañamiento. Respaldo global y éxito local', followers: 19, score: 78 },
+            { handle: '@cotemayorga.v', bio: 'María José Mayorga V. - Emprendedora digital', followers: 0, score: 77 }
         ];
 
         const niuroStories = [
