--- a/index.html
+++ b/index.html
@@ -1280,49 +1280,49 @@
         ];
 
         const niuroFollowsBios = [
-            { handle: '@chilenacionemprendedora', bio: 'Historias reales para pensar y construir mejores empresas. Podcast de empresarios y ejecutivos', followers: 4961, score: 95 },
-            { handle: '@eva.confia', bio: '15+ años seleccionando personal de confianza. Experiencia en Perú, México y España', followers: 2515, score: 94 },
-            { handle: '@talentmomentum', bio: 'Nosotros ponemos el talento, tú haces crecer tu empresa. Gestión integral de talento remoto', followers: 45, score: 92 },
-            { handle: '@mimconsultoraintegralrrhh', bio: 'Consultora Integral de RRHH. Acompañamos la gestión de personas. Soluciones claras y a la medida', followers: 52, score: 91 },
-            { handle: '@impulsotalento.spa', bio: 'Impulsamos a profesionales en su búsqueda laboral. Apoyamos empresas en sus procesos de selección', followers: 35, score: 90 },
-            { handle: '@octavio.presales', bio: 'PreSales Specialist | Solutions & Sales Engineering Evangelist | Passionate about Marketing', followers: 39, score: 89 },
-            { handle: '@ximeworks', bio: 'Diseñadora de productos digitales UX/UI, además me encanta ilustrar y las cosas manuales', followers: 281, score: 88 },
-            { handle: '@reclutamiento_sta.lucia', bio: '¿Quieres Trabajar con nosotros? Reclutamiento y selección de personal', followers: 64, score: 87 },
-            { handle: '@cvlisto.servicios', bio: 'CV Listo - Currículum profesionales. Te hacemos el CV y postulamos por ti. Rápido y eficaz', followers: 10, score: 86 },
-            { handle: '@consultoramymspa', bio: 'Asesorías en seguridad y salud laboral para diversos rubros. Comités Paritarios y Prevención', followers: 57, score: 85 },
-            { handle: '@erp.techy', bio: 'IT Service and Consultancy. Systematic Business Development. Setup & Renew Inventory', followers: 7, score: 84 },
-            { handle: '@hti_automation', bio: 'Laborautomatisierung: Etikettieren, Befüllen & Verschrauben. Engineering Made in Germany', followers: 316, score: 88 },
-            { handle: '@samycloses', bio: 'HTS - Coaches don\'t play & I don\'t miss', followers: 1305, score: 82 },
-            { handle: '@corejack', bio: 'Tech & Gaming Community', followers: 691, score: 81 },
-            { handle: '@lisettegomez_remax_start', bio: 'Tecnología, expertise, agilidad y acompañamiento a nuestros clientes. Respaldo global y éxito local', followers: 19, score: 80 },
-            { handle: '@e_llanten', bio: 'Músico/Ingeniero. Viña Del Mar, Chile', followers: 1371, score: 79 },
-            { handle: '@maisfloro.tech', bio: 'Director SRE at Talana. Founder AWS Girls Chile. Ex-AWS. Woman in Tech', followers: 1547, score: 93 },
-            { handle: '@obriiconsulting', bio: 'HR Tech & Psicología. Fusionamos ciencia e IA para selección de talento precisa y libre de sesgo', followers: 148, score: 91 },
-            { handle: '@hola_soysergio', bio: 'Emprendedor digital | Tech & innovación', followers: 0, score: 78 },
-            { handle: '@kollectgroup', bio: 'Firma Legal Boutique | Soluciones claras. Asesoría personalizada y eficiente', followers: 130, score: 83 }
+            { handle: '@godiegoarias', bio: 'Menos llanto, más acción. @desafiolatam. Crecimiento constante', followers: 9892, score: 95 },
+            { handle: '@salvadorfelix_', bio: 'Multimedia & Writer. Creatividad y producción audiovisual', followers: 2954, score: 94 },
+            { handle: '@tomasdintrans', bio: 'Santiago, Chile. Emprendedor y creador de contenido digital', followers: 2358, score: 93 },
+            { handle: '@alau_daniela', bio: 'Daniela Santos. Profesional de tecnología y desarrollo', followers: 1731, score: 92 },
+            { handle: '@lindsay_iturra', bio: 'Lindsay. Coaching y Mindfulness. Bienestar integral', followers: 1318, score: 91 },
+            { handle: '@antoniaortiz_', bio: 'Antonia Ortiz. Danza y coreografía. Arte en movimiento', followers: 1252, score: 90 },
+            { handle: '@rafaelplaza24', bio: 'Rafael Plaza. Master en RRHH. Gestión de talento en Chile', followers: 681, score: 89 },
+            { handle: '@icaro.pradoo', bio: 'ÍCARO PRADO. Tech e informática. Desarrollo de soluciones', followers: 606, score: 88 },
+            { handle: '@euisabelajardim', bio: 'Isabela Jardim. Creadora de contenido y profesional digital', followers: 603, score: 87 },
+            { handle: '@jozianegasparetto', bio: 'Joziane Gasparetto. Profesional y emprendedora', followers: 389, score: 86 },
+            { handle: '@jimenabenavidesc', bio: 'Jimena Benavides. Psicóloga y Coach. Bienestar laboral', followers: 334, score: 85 },
+            { handle: '@tadysakurada', bio: 'Tadashi Sakurada Cortes. Profesional multidisciplinario', followers: 279, score: 84 },
+            { handle: '@davherfer', bio: 'David Herrera. Profesional tech y creador de contenido', followers: 215, score: 83 },
+            { handle: '@dylanpdb', bio: 'Dylan Paolo Diaz Bongiorno. Chile. Creador activo', followers: 172, score: 82 },
+            { handle: '@emiir.friitis', bio: 'Emir Fritis Saldana. Chile. Tecnología y desarrollo', followers: 116, score: 81 },
+            { handle: '@mgabyc_30', bio: 'Gabriela Cantos. Ecuatoriana. Profesional y creadora', followers: 100, score: 80 },
+            { handle: '@assumpcaoluizfelipe', bio: 'Felipe Assumpcao. Developer y Solutions. Innovación tech', followers: 84, score: 79 },
+            { handle: '@artleen_view', bio: 'Aileen González. Artista visual y creadora de contenido', followers: 76, score: 78 },
+            { handle: '@ps.carolinaacevedo', bio: 'Carolina Acevedo Ch. Psicóloga Clínica. Bienestar mental', followers: 62, score: 77 },
+            { handle: '@christian_suarez_mendoza', bio: 'Christian Suárez Mendoza. Profesional tech activo', followers: 57, score: 76 }
         ];
 
         const enderysFollowsBios = [
-            { handle: '@miguelrojas.ia', bio: 'Convierto la IA en una aliada cotidiana. ¿Quieres ser parte de IA sin Miedo?', followers: 719, score: 95 },
-            { handle: '@simplilatam', bio: 'Factoring digital, humano y simple. Liquidez en el mismo día y total transparencia. Plataforma digital', followers: 4698, score: 94 },
-            { handle: '@fonttech.cl', bio: 'Desarrollo y Gestión de plataformas SaaS. Aplicaciones web. Gestiona tu proyecto con desarrollo experto', followers: 13, score: 92 },
-            { handle: '@codestorechile', bio: 'Mercado de software en Chile. Regístrate gratis. CodeStore Marketplace de Software', followers: 6, score: 91 },
-            { handle: '@goxt_innovacion', bio: 'Software que impulsa negocios. Tecnología para empresas en crecimiento. CRM + Operación Logística', followers: 3, score: 90 },
-            { handle: '@clodi.cl', bio: 'Menos papeles, más control de seguridad HSE. Plataforma de gestión digital', followers: 5, score: 89 },
-            { handle: '@brucebruce_dev', bio: 'Python sin humo. Código claro. Resultados reales. Shorts diarios', followers: 0, score: 88 },
-            { handle: '@dva.legal', bio: 'Registro de Marcas. Asesoría legal a Condominios. Servicios legales corporativos', followers: 350, score: 87 },
-            { handle: '@startupnewsitalia', bio: 'Startup News Italia - Noticias del ecosistema emprendedor', followers: 85, score: 86 },
-            { handle: '@track_time_', bio: 'Tracking y gestión de tiempo. Productividad y eficiencia', followers: 2228, score: 85 },
-            { handle: '@miguelurrutiaceo_', bio: 'Founder @detef_. CEO & emprendedor tech', followers: 31, score: 84 },
-            { handle: '@duploz.cl', bio: 'Cocktails & Craft Beer. Apoquindo 4900, Las Condes', followers: 39335, score: 80 },
-            { handle: '@obriiconsulting', bio: 'HR Tech & Psicología. Fusionamos ciencia e IA para selección de talento precisa y libre de sesgo', followers: 148, score: 93 },
-            { handle: '@dieptar', bio: 'Diego Shepherd - Emprendedor y creador de contenido', followers: 0, score: 82 },
-            { handle: '@kollectgroup', bio: 'Firma Legal Boutique. Soluciones claras y asesoría personalizada', followers: 130, score: 83 },
-            { handle: '@draerikavillavicencioayub', bio: 'Dra. Erika Villavicencio Ayub - Investigadora y conferencista', followers: 213, score: 81 },
-            { handle: '@maisfloro.tech', bio: 'Director SRE at Talana. Founder AWS Girls Chile. Ex-AWS. Woman in Tech', followers: 1547, score: 91 },
-            { handle: '@e_llanten', bio: 'Músico/Ingeniero. Viña Del Mar, Chile', followers: 1371, score: 79 },
-            { handle: '@lisettegomez_remax_start', bio: 'Tecnología, expertise, agilidad y acompañamiento. Respaldo global y éxito local', followers: 19, score: 78 },
-            { handle: '@cotemayorga.v', bio: 'María José Mayorga V. - Emprendedora digital', followers: 0, score: 77 }
+            { handle: '@tomasffrench_davis', bio: 'Chileno en México. Emprendedor serial. Speaker TEDx. Cofundador @goodplayers.cl', followers: 11045, score: 95 },
+            { handle: '@ignacio.quezada.l', bio: 'Host @dentrodeljuego_ontour. Claves de negocios exitosos. Fanático de la lectura', followers: 8479, score: 94 },
+            { handle: '@proita', bio: 'Patricia Roa. Santiago, Chile. Creadora de contenido activa', followers: 7361, score: 93 },
+            { handle: '@komalchile', bio: 'Komal Dadlani. Biochemist. Bloomberg Most Influential. WEF YGL. MIT 35u35', followers: 6739, score: 92 },
+            { handle: '@alvasil', bio: 'Alvaro Silberstein. Co-Founder @wheeltheworld. Berkeley, CA', followers: 5664, score: 91 },
+            { handle: '@franciscoceabro', bio: 'Francisco Cea. Active Player. Podcaster @ceabrothers. Optimismo y acción', followers: 2976, score: 90 },
+            { handle: '@javier.psd', bio: 'Javier Alonso. Director de Arte @motordoo. Creativo visual y Brand Designer. Santiago', followers: 2167, score: 89 },
+            { handle: '@ctheodor', bio: 'Cristopher Theodoropoulos. Emprendedor. Founder @toliv.social y @aureolab', followers: 1186, score: 88 },
+            { handle: '@paulosaldivar', bio: 'Paulo Andrés Saldivar Aguilera. Profesional y emprendedor', followers: 735, score: 87 },
+            { handle: '@arthur.estima', bio: 'Arthur Estima. Educación Financiera para Empresas. Atendimiento Individual', followers: 523, score: 86 },
+            { handle: '@panconqueso__', bio: 'Francisco Sanhueza M. Creador de contenido activo en Chile', followers: 419, score: 85 },
+            { handle: '@lobo_striker', bio: 'Jorge Lobo. Kickboxer Senshi/KWU. Dojo Valdivia. Puente Alto, Chile', followers: 419, score: 84 },
+            { handle: '@sebasespinozalegal', bio: 'Sebastián Espinoza. Neuromarketing Jurídico. Posicionamiento para abogados', followers: 408, score: 83 },
+            { handle: '@abogadoedwinbanquez', bio: 'Edwin Banquez. Abogado. Asesoría legal y representación profesional', followers: 398, score: 82 },
+            { handle: '@dva.legal', bio: 'Dayana Varela. Abogada Corporativa. Registro de Marcas y Asesoría Legal', followers: 350, score: 81 },
+            { handle: '@leymerflorez', bio: 'Leymer Adrián Flórez. Creador de contenido activo y profesional', followers: 242, score: 80 },
+            { handle: '@evaptrsen', bio: 'Eva Christina Petersen. Design and art. Creatividad visual', followers: 233, score: 79 },
+            { handle: '@lautaro.gutierrez97', bio: 'Lautaro Gutierrez. Social Scientist. Mente y cuerpo sobre todas las cosas', followers: 208, score: 78 },
+            { handle: '@saviotech_', bio: 'Saraí. Desarrollo Web e Impresión 3D. Páginas Web y CRM', followers: 388, score: 77 },
+            { handle: '@dilaw.sur', bio: 'Matías De La Jara. Abogado desde el sur de Chile. Derecho Civil, Familia y Laboral', followers: 73, score: 76 }
         ];
 
         const niuroStories = [
